# GRIP-Sim

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  button.gd  button.gd.uid  character_body_3d.gd  character_body_3d.gd.uid  icon.svg.import  main_menu.gd  main_menu.gd.uid  main_menu.tscn  main_node_3d.tscn  project.godot  vcpkg.json
cmake/: CompilerFlags.cmake  SnapshotBuild.cmake  SpvCompile.cmake
shaders/: debug_line.frag  debug_line.vert  road.frag  road.vert  scene.frag  scene.vert  sky.frag  sky.vert  vehicle.frag  vehicle.vert
src/: AeroSurface.cpp  AeroSurface.hpp  AudioEngine.cpp  AudioEngine.hpp  Body.cpp  Body.hpp  BrakeSystem.cpp  BrakeSystem.hpp  BrushTire.cpp  BrushTire.hpp  Drivetrain.cpp  Drivetrain.hpp  Engine.cpp  Engine.h  Engine.hpp  Input.h  Input.hpp  LuGreTire.cpp  LuGreTire.hpp  Mass.cpp  Mass.hpp  PressureTire.cpp  PressureTire.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Scenario.cpp  Scenario.h  Scenario.hpp  SimpleTire.cpp  SimpleTire.hpp  SpringDamper.cpp  SpringDamper.hpp  Subframe.cpp  Subframe.h  Subframe.hpp  Suspension.h  Suspension.hpp  SuspensionCorner.cpp  SuspensionCorner.hpp  (+21 more)
src/core/: Engine.cpp  Engine.h  Logging.h  ModuleRegistry.h
src/input/: IInputProvider.h  InputFrame.h  SdlInputProvider.cpp  SdlInputProvider.h
src/pacenote/: ConsolePaceNoteReader.cpp  ConsolePaceNoteReader.h  GripNoteFormat.h  GripPaceNoteGenerator.cpp  GripPaceNoteGenerator.h  IPaceNoteGenerator.h  IPaceNoteReader.h  PaceNote.cpp  PaceNote.h  WindowsSapiReader.cpp  WindowsSapiReader.h
src/rendering/: Camera.cpp  Camera.h  HudOverlay.cpp  HudOverlay.h  IRoadRenderer.h  RoadMesh.h  VehicleMesh.cpp  VehicleMesh.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRoadRenderer.cpp  VulkanRoadRenderer.h
src/road/: GripTypes.h  IRoadGenerator.h  RoadBuilder.cpp  RoadBuilder.h  TerrainQuery.cpp  TerrainQuery.h  TestStageGenerator.cpp  TestStageGenerator.h
src/vehicle/: CubeVehicle.cpp  CubeVehicle.h  IVehicleDynamics.h  MultiBodyParams.h  MultiBodyVehicle.cpp  MultiBodyVehicle.h  SemiRealisticVehicle.cpp  SemiRealisticVehicle.h  VehicleParams.h  VehicleState.h
tests/: component_test.cpp  driving_test.cpp  engine_test.cpp  test_common.hpp  tire_test.cpp  vehicle_physics_test.cpp  vehicle_test.cpp
